# insane-web-scrapper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  worker.py
app/: config.py  constants.py  logging_config.py  metrics.py  models.py
app/api/: app.py
app/api/routes/: health.py  jobs.py
app/db/: pool.py  queries.py
app/worker/: domain_lock.py  errors.py  fetch.py  parse.py  runner.py  storage.py
docs/: spec.md  spec_1.md  spec_2.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  scraper.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: bulk_submit.sh  crawl.py  submit.sh
