[project]
name = "insane-web-scrapper"
version = "0.1.0"
description = "Distributed async web scraper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.14.1",
    "alembic>=1.14.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "prometheus-client>=0.21.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
